[FIX] sign: fixes selection sign item alignment
When signing selection items in sign, the options are shown unaligned and
depending on the viewport, even hidden. This PR fixes this alignment error
by changing the selection sign item css only for the sign session.

task-2628919

closes odoo/enterprise#20942

X-original-commit: e70192fe3fd0d7a465e13c51c8fd60d6ab535695

--- a/sign/static/src/css/iframe.css
+++ b/sign/static/src/css/iframe.css
@@ -135,21 +135,23 @@ textarea.o_sign_sign_item {
 
 .o_sign_select_options_display {
     height: 100%;
-    width: 100%;
-    display: flex;
-    margin-top: -22px;
+    width: calc(100% - 25px);
     align-items: center;
     justify-content: left;
+    padding-left: 25px;
+}
+
+.o_sign_select_options_display_edit{
+    display: flex;
+    padding-left: 0;
 }
 
 .o_sign_item_option {
-    padding: 5px 5px 5px 30px; /* padding left for sign_config_handle */
-    /* font-size: 12pt; */
+    padding: 5px;
 }
 
 .o_sign_option_separator {
     padding: 5px;
-    /* font-size: 12pt; */
 }
 
 .o_sign_selected_option {
